--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 h1 {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
-  margin: 20px, auto;
+  margin: 10px, auto;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -20,30 +20,66 @@ h2 {
 p {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  text-align: center;
+  font-size: 13px;
+  text-align: left;
   line-height: 30px;
+  overflow-wrap: break-word;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 30px;
 }
-.chatBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+
+.textarea {
+  width: 150%;
 }
 
-.ansewr {
-  display: block;
+.textarea-button {
+  background-color: #b42f5a;
+  color: white;
+  border: none;
+  padding: 15px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 16px;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
+.chatBox {
   display: flex;
+  width: 100vw;
+  margin: 10px, auto;
   flex-direction: column;
-  margin: 20px auto;
   justify-content: center;
   align-items: center;
-  width: 600px;
+}
+.response {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.response button {
+  margin-top: 15px;
+}
+.response-copy {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: antiquewhite;
+  text-align: center;
+  padding: 10px;
+  width: 80%;
+  margin-top: 15px;
+  cursor: pointer;
 }
