--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ form {
   color: white;
   border: none;
   padding: 15px;
+  margin-bottom: 15px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 16px;
@@ -55,7 +56,6 @@ form {
 }
 .chatBox {
   display: flex;
-  width: 100vw;
   margin: 10px, auto;
   flex-direction: column;
   justify-content: center;
